--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<body class="gap-4 bg-gradient-to-r from-purple-500 to-pink-500">
+<body class="bg-gradient-to-r from-purple-500 to-pink-500">
     <nav class="flex justify-center fixed top-0 w-full bg-white/75  p-4 m-1 text-center" style="backdrop-filter: blur(8px);">
-        <ul class="flex">
-            <li class="mr-6 align-middle mt-4"><a href="index.html" class="no-underline font-bold">Home</a></li>
-            <li class="mr-6 align-middle mt-4"><a href="Contact.html" class="no-underline font-bold">Contact Us</a></li>
-            <li class="mr-6 align-middle mt-4"><a href="Team.html" class="no-underline font-bold">Meet the Team</a></li>
+        <ul class="flex items-center">
+            <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
+            <li class="mr-6  mt-3"><a href="Contact.html" class="no-underline">Contact Us</a></li>
+            <li class="mr-6  mt-3"><a href="Team.html" class="no-underline">Meet the Team</a></li>
         </ul>
     </nav>
     <div class="pt-20"></div>
@@ -77,12 +77,38 @@
                 that information. Users usually do accept said release of information as soon as they open their
                 phones not paying attention to what is said and automatically accept the terms & conditions.
             </p>
+
+            <p class="p-3">
+                When automatically agreeing to terms and conditions courts will usually side with the
+                company involved in any case, due to the fact that assent or agreement from a customer is
+                directly from the first approval of a terms and conditions warning. That being said, a person at
+                any time accepts a terms & conditions agreement their chances to sue a company and for
+                something they didn’t know was said in them would most likely automatically lose said lawsuit.
+            </p>
+
+            <p class="p-3">To avoid any confusion companies must create a terms and conditions that is clearly
+                noticeable for the user to understand, they usually try not to use a link to tell one to click to read
+                on a different page from where the agree button is.
+                The text is most of the time before the agree button giving the user a fair chance to
+                possibly read before they do agree to anything.
+            </p>
         </div>
     </article>
     <article class="flex justify-center mb-4 fly-in-from-left">
         <div class="container width: 80% p-3 bg-white rounded-md ">
-            <header class="text-3xl p-3 font-bold">Introduction</header>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor quaerat reiciendis id magnam animi debitis impedit assumenda, doloremque ex eligendi illo minus consequatur mollitia totam nulla, consectetur repellendus eum.</p>
+            <header class="text-3xl p-3 font-bold">Information Apple Gathers From Users</header>
+            <p class="p-3"> Account Information: Apple ID, Email Address, Registered Devices, Age,
+                Device Information: Data used to identify device, serial number, internet type
+                Contact Information: Name, Email Address, Address, Number, & other contact information
+                Payment Information: Billing addresses, payment methods, credit, debit, other card information
+                Transaction Information: Previous purchase history of Apple products
+                Fraud Prevention Information: Data used to identify fraud
+                Usage Data: Data about what activity the user does including app launches, browsing history,
+                search history, interactions, diagnostics, performance.
+                Location Information: Precise location
+                Health Information: Health related data of the user.
+                Fitness Information: Data relating to the users fitness if the user chooses to share them
+                Financial Information: Details about salary, income, and assets</p>
         </div>
     </article>
 </body>
