changes teams page

--- a/Team.html
+++ b/Team.html
@@ -3,31 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Exploring Ethics and Laws</title>
+    
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
-    <nav class="flex justify-center fixed top-0 w-full bg-white p-4 text-center">
-        <ul class="flex">
-            <li class="mr-6 mt-4"><a href="index.html" class="no-underline">Home</a></li>
-            <li class="mr-6 mt-4"><a href="Contact.html" class="no-underline">Contact Us</a></li>
-            <li class="mr-6 mt-4"><a href="Team.html" class="no-underline">Meet the Team</a></li>
+<body class="bg-gradient-to-r from-purple-500 to-pink-500">
+    <nav class="flex justify-center fixed top-0 w-full bg-white/75  p-4 m-1 text-center" style="backdrop-filter: blur(8px);">
+        <ul class="flex items-center">
+            <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
+            <li class="mr-6  mt-3"><a href="Contact.html" class="no-underline">Contact Us</a></li>
+            <li class="mr-6  mt-3"><a href="Team.html" class="no-underline">Meet the Team</a></li>
         </ul>
     </nav>
     <div class="pt-20"></div>
     <header class="flex justify-center font-bold text-3xl">Here's the team behind the Article!</header>
     <div class="container mx-auto flex justify-center flex-wrap mt-2.5">
-        <div class="border-2 bg-zinc-700 h-56 w-56 mx-4 my-4 rounded-md">
+        <div class=" bg-zinc-700 h-56 w-56 mx-4 my-4 rounded-md">
             <div class="h-12 overflow-hidden bg-blue-500 flex items-end">
                 <span class="bg-blue-500 text-white p-2">Name</span>
             </div>
         </div>
-        <div class="border-2 bg-zinc-700 h-56 w-56 mx-4 my-4 rounded-md">
+        <div class=" bg-zinc-700 h-56 w-56 mx-4 my-4 rounded-md">
             <div class="h-12 overflow-hidden bg-blue-500 flex items-end">
                 <span class="bg-blue-500 text-white p-2">Name</span>
             </div>
         </div>
-        <div class="border-2 bg-zinc-700 h-56 w-56 mx-4 my-4 rounded-md">
+        <div class=" bg-zinc-700 h-56 w-56 mx-4 my-4 rounded-md">
             <div class="h-12 overflow-hidden bg-blue-500 flex items-end">
                 <span class="bg-blue-500 text-white p-2">Name</span>
             </div>
