--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Exploring Ethics and Laws</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -17,13 +17,6 @@
         </ul>
     </nav>
     <div class="pt-20"></div>
-    <div class="contCT flex flex-col align-center border-4 m-4 p-4 justify-center items-center">
-        <span class=" ">Feel free to contact us for any questions you might have</span>
-        <ul class="flex  gap-4">
-            <li class="h-40 w-40 bg-grey rounded-md border-4"><a href="lenyeuwaeme@gmail.com"> Name</a></li>
-            <li class="h-40 w-40 bg-grey rounded-md border-4"><a href="lenyeuwaeme@gmail.com"> Name</a></li>
-            <li class="h-40 w-40 bg-grey rounded-md border-4"><a href="lenyeuwaeme@gmail.com"> Name</a></li>
-        </ul>
-    </div>
+    
 </body>
 </html>
