--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body class="bg-gradient-to-r from-purple-500 to-pink-500">
-    <nav class="flex justify-center fixed top-0 w-full bg-white/75  p-4 m-1 text-center" style="backdrop-filter: blur(8px);">
+    <nav class="flex justify-center items-center fixed top-8  left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white/75 p-3 m-1 text-center w-11/12 rounded-md" style="backdrop-filter: blur(8px); width: 80%;">
         <ul class="flex items-center">
             <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
             <li class="mr-6  mt-3"><a href="Contact.html" class="no-underline">Contact Us</a></li>
