changed the padding and display for thee cards on the teams page

--- a/Team.html
+++ b/Team.html
@@ -16,24 +16,19 @@
             <li class="mr-6  mt-3"><a href="Team.html" class="no-underline">Meet the Team</a></li>
         </ul>
     </nav>
-    <div class="pt-20"></div>
-    <header class="flex justify-center font-bold text-3xl">Here's the team behind the Article!</header>
-    <div class="container mx-auto flex justify-center flex-wrap mt-2.5">
-        <div class=" bg-zinc-700 h-56 w-56 mx-4 my-4 rounded-md">
-            <div class="h-12 overflow-hidden bg-blue-500 flex items-end">
-                <span class="bg-blue-500 text-white p-2">Name</span>
+    
+    <header class="flex justify-center font-bold text-3xl mt-24">Here's the team behind the Article!</header>
+    <div class="container mx-auto flex justify-center">
+        <article class="flex justify-center mb-4">
+            <div class="card bg-white flex rounded-md p-4 justifly-center flex-col">
+                <h1 class="font-bold text-3xl">Jemoke</h1>
+                
+                <section class="flex">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem hic totam quis, dolorem veritatis, eos in repellendus iure eveniet, aperiam sequi animi nihil pariatur eius temporibus minus deleniti. Nulla, eligendi!</p>
+                    <img src="images/IMG_8889.jpg" alt="" class="w-52">
+                </section>
             </div>
-        </div>
-        <div class=" bg-zinc-700 h-56 w-56 mx-4 my-4 rounded-md">
-            <div class="h-12 overflow-hidden bg-blue-500 flex items-end">
-                <span class="bg-blue-500 text-white p-2">Name</span>
-            </div>
-        </div>
-        <div class=" bg-zinc-700 h-56 w-56 mx-4 my-4 rounded-md">
-            <div class="h-12 overflow-hidden bg-blue-500 flex items-end">
-                <span class="bg-blue-500 text-white p-2">Name</span>
-            </div>
-        </div>
+        </article>
     </div>
 </body>
 </html>
