--- a/Team.html
+++ b/Team.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-r from-purple-500 to-pink-500 navstyle">
-    <nav class="flex justify-center items-center sticky top-8   bg-white/75 p-3 m-1 text-center w-11/12 rounded-md" style="backdrop-filter: blur(8px); width: 80%;">
+    <nav class="flex justify-center items-center sticky top-1   bg-white/75 p-3 m-1 text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
         <ul class="flex items-center">
             <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
             <li class="mr-6  mt-3"><a href="Contact.html" class="no-underline">Contact Us</a></li>
@@ -32,10 +32,11 @@
 
         <article class="flex justify-center mb-4">
             <div class="card bg-white flex rounded-md p-4 justifly-center flex-col max-w-5xl">
-                <h2 class="font-bold text-3xl p-2">Jemuke <a href="" class="bg-gradient-to-r from-purple-500 to-pink-500 w-2 p-2 rounded-full text-lg text-white">LinkedIn</a></h2>
+                <h2 class="font-bold text-3xl p-2">Samuel <a href="https://www.linkedin.com/in/samuel-roberts-8250b1263" target="_blank" class="bg-gradient-to-r from-purple-500 to-pink-500 w-2 p-2 rounded-full text-lg text-white">LinkedIn</a></h2>
                 
                 <section class="flex max-w-5xl">
-                    <p class="max-w-xl p-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem hic totam quis, dolorem veritatis, eos in repellendus iure eveniet, aperiam sequi animi nihil pariatur eius temporibus minus deleniti. Nulla, eligendi!</p>
+                    <p class="max-w-xl p-2 mr-4">Samuel Roberts, Morgan State Junior in Multi-Platform Production, brings stories to life. From internships at Stanley Black and Decker to editing "The Morgan Show," he's a visual storyteller. As a Good School Pod Podcast producer, his skills extend to audio. Collaborating with filmmaker Alvin Gray, Samuel's narrative transcends screens.
+                    </p>
                     <img src="images/Headshot 1.jpg" alt="" class="w-52 rounded-md custombox">
                 </section>
             </div>
@@ -43,10 +44,10 @@
 
         <article class="flex justify-center mb-4">
             <div class="card bg-white flex rounded-md p-4 justifly-center flex-col max-w-5xl">
-                <h2 class="font-bold text-3xl p-2">Jemuke <a href="" class="bg-gradient-to-r from-purple-500 to-pink-500 w-2 p-2 rounded-full text-lg text-white">LinkedIn</a></h2>
+                <h2 class="font-bold text-3xl p-2">DeRon <a href="https://www.linkedin.com/in/deron-miles-1684a7241" target="_blank" class="bg-gradient-to-r from-purple-500 to-pink-500 w-2 p-2 rounded-full text-lg text-white">LinkedIn</a></h2>
                 
-                <section class="flex max-w-5xl">
-                    <p class="max-w-xl p-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem hic totam quis, dolorem veritatis, eos in repellendus iure eveniet, aperiam sequi animi nihil pariatur eius temporibus minus deleniti. Nulla, eligendi!</p>
+                <section class="flex max-w-5xl mr-4">
+                    <p class="max-w-xl p-2">DeRon Miles is a videographer, photographer, and on-air personality with skills of video and audio editing having done work for live recordings, projects, and podcast. DeRon Miles is a current student at Morgan State University with intentions to one day have his work and his face on the many screens everywhere.</p>
                     <img src="images/IMG_4980.jpg" alt="" class="w-52 rounded-md custombox">
                 </section>
             </div>
