--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 </head>
 <body class="bg-gradient-to-r from-purple-500 to-pink-500">
-    <nav class="flex justify-center items-center fixed top-8  left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white/75 p-3 m-1 text-center w-11/12 rounded-md" style="backdrop-filter: blur(8px); width: 80%;">
+    <nav class="flex justify-center items-center sticky top-1   bg-white/75 p-3 m-1 text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
         <ul class="flex items-center">
             <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
             <li class="mr-6  mt-3"><a href="Contact.html" class="no-underline">Contact Us</a></li>
             <li class="mr-6  mt-3"><a href="Team.html" class="no-underline">Meet the Team</a></li>
         </ul>
     </nav>
-    <div class="pt-20"></div>
+    
     <article class="flex justify-center mb-4 fly-in-from-left">
         <div class="container width: 80% p-3 bg-white rounded-lg">
             <header class="text-3xl font-bold p-3">Introduction</header>
