--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body class="bg-gradient-to-r from-purple-500 to-pink-500">
-    <nav class="flex justify-center items-center sticky top-1   bg-white/75 p-3 m-1 text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
+    <nav class="flex justify-center items-center sticky   bg-white/75 p-3 m-1 text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
         <ul class="flex items-center">
             <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
             <li class="mr-6  mt-3"><a href="Contact.html" class="no-underline">Contact Us</a></li>
