--- a/Contact.html
+++ b/Contact.html
@@ -9,10 +9,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-r from-purple-500 to-pink-500 navstyle">
-    <nav class="flex justify-center items-center sticky bg-white/75 p-3  text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
+    <nav class="flex justify-center items-center sticky bg-white/75 p-3 mb-2  text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
         <ul class="flex items-center">
             <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
-            <li class="mr-6  mt-3"><a href="Contact.html" class="no-underline">Contact Us</a></li>
+            <li class="mr-6  mt-3"><a href="Contact.html" class="no-underline">Video</a></li>
             <li class="mr-6  mt-3"><a href="Team.html" class="no-underline">Meet the Team</a></li>
         </ul>
     </nav>
