ok this is the final version i think

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body class="bg-gradient-to-r from-purple-500 to-pink-500">
-    <nav class="flex justify-center items-center sticky   bg-white/75 p-3 text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
+    <nav class="flex justify-center items-center sticky mb-2 bg-white/75 p-3 text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
         <ul class="flex items-center">
             <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
             <li class="mr-6  mt-3"><a href="Contact.html" class="no-underline">Video</a></li>
@@ -97,6 +97,7 @@
             </p>
         </div>
     </article>
+    
     <article class="flex justify-center mb-4 fly-in-from-left">
         <div class="container width: 80% p-3 bg-white rounded-md ">
             <header class="text-3xl p-3 font-bold">Information Apple Gathers From Users</header>
@@ -118,5 +119,48 @@
             </p>
         </div>
     </article>
+
+    <article class="flex justify-center mb-4 fly-in-from-left">
+        <div class="container width: 80% p-3 bg-white rounded-md ">
+            <header class="text-3xl p-3 font-bold">Supporting Articles</header>
+            <p class="p-3"> 
+                The Apple Siri Class Action Lawsuit is Lopez v. Apple, Inc., Case No. 4:19-cv-04577, in the U.S. District Court for the Northern District of California.
+
+                https://topclassactions.com/lawsuit-settlements/privacy/apple-siri-eavesdropping-class-action-claims-proceed-under-recent-ruling/#:~:text=Consumers%20Claim%20Ad%20Targeting%20After,had%20near%20a%20Siri%20device
+
+            </p>
+
+            <p class="p-3">
+                Published in September 7, 2021 by Abraham Jewett
+                A federal judge in California has readmitted part of an amended class action lawsuit filed against Apple alleging its Siri voice-activation 
+                devices violated the privacy of consumers by improperly recording, storing, and sharing private conversations.
+
+                https://www.reuters.com/technology/apple-must-face-siri-voice-assistant-privacy-lawsuit-us-judge-2021-09-02/
+
+            </p>
+
+            <p class="p-3">
+                By Jonathan Stempel
+                September 2, 20211:20 PM EDT  Updated 2 years ago
+
+                U.S. District Judge Jeffrey White said the plaintiffs could try to prove Siri routinely recorded their private conversations because of "accidental activations," and that Apple disclosed these conversations to third parties, such as advertisers.
+
+
+                https://topclassactions.com/lawsuit-settlements/consumer-products/mobile-apps/apple-class-action-says-siri-records-without-consent/
+
+            </p>
+
+            <p class="p-3">
+                Emily Sortor  |  August 9, 2019
+                U.S. District Judge Jeffrey S. White reopens 
+                In the case  improperly recording, storing, and sharing private conversations. 
+                Apple’s argument: Apple argued that it did not intentionally intercept any conversations. 
+                Plaintiff Fumiko Lopez’s: he allegedly received targeted advertisements based on private conversations he had near a Siri device. 
+                John Pappas: alleges he received targeted advertisements for pharmaceutical drugs after he talked to his physician in the presence of an Apple Siri device. 
+
+            </p>
+        </div>
+    </article>
+
 </body>
 </html>
