--- a/Contact.html
+++ b/Contact.html
@@ -16,4 +16,14 @@
             <li class="mr-6  mt-3"><a href="Team.html" class="no-underline">Meet the Team</a></li>
         </ul>
     </nav>
+    <div class="max-w-2xl p-6 bg-white border border-gray-200 rounded-lg shadow mt-10">
+        <h1 class="font-bold text-3xl p-2">Survey Results</h1>
+        <section class="p-2">Here's the feedback on if people read the terms and conditions for software they use</section>
+        <div class="flex"><p class="p-2 text-xl font-bold">Yes: </p><button class=" p-2 rounded-md bg-purple-300">9%</button></div>
+        <div class="flex mt-2"><p class="p-2 text-xl font-bold">No: </p><button class=" p-2 rounded-md bg-purple-300 w-52">62%</button></div>
+        <div class="flex mt-2"><p class="p-2 text-xl font-bold">Sometimes: </p><button class=" p-2 rounded-md bg-purple-300 w-20">29%</button></div>
+
+
+    </div>
+</body>
 </html>
