modified the article section

--- a/index.html
+++ b/index.html
@@ -123,32 +123,6 @@
     <article class="flex justify-center mb-4 fly-in-from-left">
         <div class="container width: 80% p-3 bg-white rounded-md ">
             <header class="text-3xl p-3 font-bold">Supporting Articles</header>
-            <p class="p-3"> 
-                The Apple Siri Class Action Lawsuit is Lopez v. Apple, Inc., Case No. 4:19-cv-04577, in the U.S. District Court for the Northern District of California.
-
-                https://topclassactions.com/lawsuit-settlements/privacy/apple-siri-eavesdropping-class-action-claims-proceed-under-recent-ruling/#:~:text=Consumers%20Claim%20Ad%20Targeting%20After,had%20near%20a%20Siri%20device
-
-            </p>
-
-            <p class="p-3">
-                Published in September 7, 2021 by Abraham Jewett
-                A federal judge in California has readmitted part of an amended class action lawsuit filed against Apple alleging its Siri voice-activation 
-                devices violated the privacy of consumers by improperly recording, storing, and sharing private conversations.
-
-                https://www.reuters.com/technology/apple-must-face-siri-voice-assistant-privacy-lawsuit-us-judge-2021-09-02/
-
-            </p>
-
-            <p class="p-3">
-                By Jonathan Stempel
-                September 2, 20211:20 PM EDT  Updated 2 years ago
-
-                U.S. District Judge Jeffrey White said the plaintiffs could try to prove Siri routinely recorded their private conversations because of "accidental activations," and that Apple disclosed these conversations to third parties, such as advertisers.
-
-
-                https://topclassactions.com/lawsuit-settlements/consumer-products/mobile-apps/apple-class-action-says-siri-records-without-consent/
-
-            </p>
 
             <p class="p-3">
                 Emily Sortor  |  August 9, 2019
@@ -158,6 +132,14 @@
                 Plaintiff Fumiko Lopez’s: he allegedly received targeted advertisements based on private conversations he had near a Siri device. 
                 John Pappas: alleges he received targeted advertisements for pharmaceutical drugs after he talked to his physician in the presence of an Apple Siri device. 
 
+            </p>
+            
+            <p>
+                The ethical concerns surrounding the extensive and intricate terms and conditions, common among tech companies, extend beyond Apple to the broader technology industry. The core of the issue lies in the challenge users face in fully comprehending the suggestion of these agreements, raising questions about the validity of informed consent. The intentional complexity of these documents obscures transparency, making it difficult for users to grasp the extent of data practices employed by the company, thereby compromising the essential principle of trust. 
+            </p>
+            
+            <p>
+                That being in the event John Pappas did read the terms and conditions prior to receiving targeted advertisements based on a private conversation he had near a Siri device he is unlikely to comprehend the material due to the language being used. This situation exacerbates the power imbalance between users and tech giants, as individuals may feel compelled to agree to terms they don't fully understand. From a legal standpoint, the enforceability of agreements is brought into question, with courts likely to scrutinize contracts that employ intentionally convoluted language. Moreover, the difficult nature of terms and conditions may lead users to unknowingly agree to privacy-invading practices, such as extensive data collection and sharing. Ultimately, these practices undermine user empowerment and necessitate concerted efforts from both regulators and the tech industry to prioritize clarity, simplicity, and transparency in conveying terms and conditions, while also emphasizing user education on the implications of online agreements.
             </p>
         </div>
     </article>
