--- a/Poll.html
+++ b/Poll.html
@@ -12,7 +12,7 @@
     <nav class="flex justify-center items-center sticky bg-white/75 p-3 mb-2  text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
         <ul class="flex items-center">
             <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
-            <li class="mr-6  mt-3"><a href="Contact.html" class="no-underline">Video</a></li>
+            <li class="mr-6  mt-3"><a href="Poll.html" class="no-underline">Poll</a></li>
             <li class="mr-6  mt-3"><a href="Team.html" class="no-underline">Meet the Team</a></li>
         </ul>
     </nav>
