modified the article section a second time

--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
                 John Pappas: alleges he received targeted advertisements for pharmaceutical drugs after he talked to his physician in the presence of an Apple Siri device. 
 
             </p>
-            
-            <p>
+
+            <p class="p-3">
                 The ethical concerns surrounding the extensive and intricate terms and conditions, common among tech companies, extend beyond Apple to the broader technology industry. The core of the issue lies in the challenge users face in fully comprehending the suggestion of these agreements, raising questions about the validity of informed consent. The intentional complexity of these documents obscures transparency, making it difficult for users to grasp the extent of data practices employed by the company, thereby compromising the essential principle of trust. 
             </p>
             
-            <p>
+            <p class="p-3">
                 That being in the event John Pappas did read the terms and conditions prior to receiving targeted advertisements based on a private conversation he had near a Siri device he is unlikely to comprehend the material due to the language being used. This situation exacerbates the power imbalance between users and tech giants, as individuals may feel compelled to agree to terms they don't fully understand. From a legal standpoint, the enforceability of agreements is brought into question, with courts likely to scrutinize contracts that employ intentionally convoluted language. Moreover, the difficult nature of terms and conditions may lead users to unknowingly agree to privacy-invading practices, such as extensive data collection and sharing. Ultimately, these practices undermine user empowerment and necessitate concerted efforts from both regulators and the tech industry to prioritize clarity, simplicity, and transparency in conveying terms and conditions, while also emphasizing user education on the implications of online agreements.
             </p>
         </div>
