modified the article section a third time

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="flex justify-center items-center sticky mb-2 bg-white/75 p-3 text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
         <ul class="flex items-center">
             <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
-            <li class="mr-6  mt-3"><a href="Contact.html" class="no-underline">Video</a></li>
+            <li class="mr-6  mt-3"><a href="Poll.html" class="no-underline">Poll</a></li>
             <li class="mr-6  mt-3"><a href="Team.html" class="no-underline">Meet the Team</a></li>
         </ul>
     </nav>
