--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <article class="flex justify-center mb-4 fly-in-from-left">
         <div class="container width: 80% p-3 bg-white rounded-md ">
-            <header class="text-3xl p-3 font-bold">Supporting Articles</header>
+            <header class="text-3xl p-3 font-bold">Invasion of Privacy</header>
 
             <p class="p-3">
                 Emily Sortor  |  August 9, 2019
