--- a/Poll.html
+++ b/Poll.html
@@ -8,7 +8,7 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-r from-purple-500 to-pink-500 navstyle">
+<body class="bg-gradient-to-r from-purple-500 to-pink-500 navstyle pb-2">
     <nav class="flex justify-center items-center sticky bg-white/75 p-3 mb-2  text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
         <ul class="flex items-center">
             <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
@@ -18,11 +18,13 @@
     </nav>
     <div class="max-w-2xl p-6 bg-white border border-gray-200 rounded-lg shadow mt-10">
         <h1 class="font-bold text-3xl p-2">Survey Results</h1>
-        <P class="p-2">A poll was taken to get an analysis of how many people may or may not check the terms and conditions before they make a decision to sign up for various application softwares. Out of 163 people, the poll broke down to what is shown above, 9 percent of people said they do read the terms and conditions, 62 percent of people said they never read before agreeing, and 29 percent said they sometimes do read before accepting the terms and conditions. In representation of a larger scale, the 9 percent represents the more cautious people and people in positions where reading the terms would be imperative, like lawyers. The 62 percent represents the majority of people who may not necessarily worry or care about what they are agreeing to, believing there is no possible danger involved. This goes to show how the majority of users are not aware or worried about what they are agreeing to which is a major concern in our society. Now that we are a lot more educated and aware of the legal principles that lie in media bringing more attention to the importance of reading the terms and conditions in order to be legally competent and protected is something we look forward to pushing forward in our communities.</P>
         <section class="p-2">We surveyed 163 and these are the results of people who read the terms and conditions for the softwares they use:</section>
         <div class="flex"><p class="p-2 text-xl font-bold">Yes: </p><button class=" p-2 rounded-md bg-purple-300">9%</button></div>
         <div class="flex mt-2"><p class="p-2 text-xl font-bold">No: </p><button class=" p-2 rounded-md bg-purple-300 w-52">62%</button></div>
         <div class="flex mt-2"><p class="p-2 text-xl font-bold">Sometimes: </p><button class=" p-2 rounded-md bg-purple-300 w-20">29%</button></div>
+
+        <P class="p-2 mt-4">A poll was taken to get an analysis of how many people may or may not check the terms and conditions before they make a decision to sign up for various application softwares. Out of 163 people, the poll broke down to what is shown above, 9 percent of people said they do read the terms and conditions, 62 percent of people said they never read before agreeing, and 29 percent said they sometimes do read before accepting the terms and conditions. In representation of a larger scale, the 9 percent represents the more cautious people and people in positions where reading the terms would be imperative, like lawyers. The 62 percent represents the majority of people who may not necessarily worry or care about what they are agreeing to, believing there is no possible danger involved. This goes to show how the majority of users are not aware or worried about what they are agreeing to which is a major concern in our society. Now that we are a lot more educated and aware of the legal principles that lie in media bringing more attention to the importance of reading the terms and conditions in order to be legally competent and protected is something we look forward to pushing forward in our communities.</P>
+        
 
 
     </div>
