--- a/Team.html
+++ b/Team.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-r from-purple-500 to-pink-500 navstyle">
-    <nav class="flex justify-center items-center sticky mb-2 bg-white/75 p-3 text-center w-full rounded-md" style="backdrop-filter: blur(8px);">
+    <nav class="flex justify-center items-center sticky mb-2 bg-white/75 p-3 text-center w-full h-20" style="backdrop-filter: blur(8px);">
         <ul class="flex items-center">
             <li class="mr-6  mt-3"><a href="index.html" class="no-underline">Home</a></li>
             <li class="mr-6  mt-3"><a href="Poll.html" class="no-underline">Poll</a></li>
